--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "validator": "^10.8.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "nodemon": "^1.18.5"
   }
 }
